# batch-compress

./: .gitignore  CLAUDE.md  LICENSE  README.md  compress.yaml.example  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/workflows/: ci.yml
tests/: __init__.py  test_main.py
